<resources>
    <string name="app_name">Trip Calculator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="banner_ad_unit_id">ca-app-pub-1105785661696607/8371235974</string>
    <string name="banner_ad_app_id">ca-app-pub-1105785661696607~6894502776</string>


    <string name="label_distance">Distance</string>
    <string name="label_petrol_price">Petrol price</string>
    <string name="label_fuel_efficiency">Fuel Efficiency</string>
    <string name="label_trip_cost">Trip cost:</string>
    <string name="label_fuel_consumed">Fuel consumed:</string>
    
    <string name="locality_volume_liters">L</string>
    <string name="locality_volume_gallons">G</string>

    <string name="locality_currency_dollar">$</string>
    <string name="locality_currency_pound">#</string>
    <string name="locality_currency_euro">E</string>

    <string name="locality_distance_km">km</string>
    <string name="locality_distance_miles">miles</string>

    <string name="unavailable_feature">Getting distance by map coming soon!</string>




</resources>
