<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="devicroft.tripcalculator.MainActivity">


        <com.google.android.gms.ads.AdView
            android:id="@+id/mainAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="33dp"
            android:padding="30dp"
            android:visibility="gone"
            ads:srcCompat="@drawable/icon_xxxhdpi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/mainAdView"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/label_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_distance" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <EditText
                            android:id="@+id/input_distance"
                            android:layout_width="309dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="numberDecimal" />

                        <ImageButton
                            android:id="@+id/map_button"
                            style="@android:style/Widget.Holo.ImageButton"
                            android:layout_width="71dp"
                            android:layout_height="wrap_content"
                            ads:srcCompat="@android:drawable/ic_dialog_map" />
                </LinearLayout>

                <TextView
                    android:id="@+id/label_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/label_petrol_price" />

                <EditText
                    android:id="@+id/input_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/label_efficiency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/label_fuel_efficiency" />

                <EditText
                    android:id="@+id/input_efficiency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/result_cost"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/label_result_cost"
                            android:layout_marginTop="18dp"
                            android:text="TextView"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                        <TextView
                            android:id="@+id/result_fuel_consumed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/result_cost"
                            android:layout_marginTop="59dp"
                            android:text="TextView"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                        <TextView
                            android:id="@+id/label_result_consumed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/result_cost"
                            android:layout_marginTop="34dp"
                            android:text="@string/label_fuel_consumed"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/label_result_cost"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/result_cost"
                            android:layout_alignLeft="@+id/result_cost"
                            android:layout_alignParentTop="true"
                            android:layout_alignRight="@+id/result_cost"
                            android:layout_alignStart="@+id/result_cost"
                            android:layout_marginTop="67dp"
                            android:text="@string/label_trip_cost"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </RelativeLayout>
        </LinearLayout>


</RelativeLayout>
